2008-04-28  Sven Neumann  <sven@gimp.org>

	* app/base/hue-saturation.c (hue_saturation): applied patch from
	Michael Deal that fixes use of the overlap option (bug #527085).

2008-04-28  Sven Neumann  <sven@gimp.org>

	* menus/image-menu.xml.in: removed GEGL tool from the Colors menu
	and also moved it out of the color tools menu.

2008-04-26  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpgegltool.c: clean up last commit.

2008-04-26  Martin Nordholts  <martinn@svn.gnome.org>

	* plug-ins/flame/libifs.c: Applied patch from Aurimas Juška. Use
	the standard rand() instead of random().

2008-04-26  Øyvind Kolås  <pippin@gimp.org>

	* app/tools/gimpgegltool.c: (gimp_get_subtype_classes),
	(gimp_gegl_tool_compare_operation_names), (gimp_get_geglopclasses),
	(gimp_gegl_tool_dialog): made the GEGL tool only show ops from
	relevant categories, the list of relevant categories is hard coded
	for now.

2008-04-26  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c
	(gimp_rectangle_tool_options_notify): No need to bail out if there
	is no display.

2008-04-26  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c
	(gimp_rectangle_tool_options_notify): Some more simplifications
	and cleanups.
	
2008-04-26  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c
	(gimp_rectangle_tool_options_notify): Simplifications and
	cleanups.

2008-04-26  Michael Natterer  <mitch@gimp.org>

	* menus/image-menu.xml.in: the gegl tool was missing from the
	"Tools" menu.

2008-04-26  Martin Nordholts  <martinn@svn.gnome.org>

	* plug-ins/flame/flame.c
	* plug-ins/flame/libifs.[ch]: Applied modified patch from Luis
	Barrancos that adds 22 new variations to the flame plugin (bug
	#389004).

2008-04-25  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimppaintoptions.c (gimp_paint_options_get_jitter):
	add g_return_if_fail().

	* app/paint/gimpheal.c (gimp_heal_motion)