@@ -79,9 +79,6 @@ static void      gimp_dock_destroy           (GtkObject             *object);
 
 static gboolean  gimp_dock_delete_event      (GtkWidget             *widget,
                                               GdkEventAny           *event);
-static gboolean  gimp_dock_key_press_event   (GtkWidget             *widget,
-                                              GdkEventKey           *kevent);
-
 static void      gimp_dock_style_set         (GtkWidget             *widget,
                                               GtkStyle              *prev_style);
 
@@ -91,7 +88,7 @@ static void      gimp_dock_real_book_removed (GimpDock              *dock,
                                               GimpDockbook          *dockbook);
 
 
-G_DEFINE_TYPE (GimpDock, gimp_dock, GTK_TYPE_WINDOW)
+G_DEFINE_TYPE (GimpDock, gimp_dock, GIMP_TYPE_WINDOW)
 
 #define parent_class gimp_dock_parent_class
 
@@ -132,7 +129,6 @@ gimp_dock_class_init (GimpDockClass *klass)
   gtk_object_class->destroy     = gimp_dock_destroy;
 
   widget_class->delete_event    = gimp_dock_delete_event;
-  widget_class->key_press_event = gimp_dock_key_press_event;
   widget_class->style_set       = gimp_dock_style_set;
 
   klass->setup                  = NULL;
@@ -324,42 +320,6 @@ gimp_dock_delete_event (GtkWidget   *widget,
     }
 
   return retval;
-}
-
-static gboolean
-gimp_dock_key_press_event (GtkWidget   *widget,
-                           GdkEventKey *event)
-{
-  GtkWindow *window  = GTK_WINDOW (widget);
-  GtkWidget *focus   = gtk_window_get_focus (window);
-  gboolean   handled = FALSE;
-
-  /* we're overriding the GtkWindow implementation here to give
-   * the focus widget precedence over unmodified accelerators
-   * before the accelerator activation scheme.
-   */
-
-  /* text widgets get all key events first */
-  if (G_UNLIKELY (GTK_IS_EDITABLE (focus) || GTK_IS_TEXT_VIEW (focus)))
-    handled = gtk_window_propagate_key_event (window, event);
-
-  /* invoke control/alt accelerators */
-  if (! handled && event->state & (GDK_CONTROL_MASK | GDK_MOD1_MASK))
-    handled = gtk_window_activate_key (window, event);
-
-  /* invoke focus widget handlers */
-  if (! handled)
-    handled = gtk_window_propagate_key_event (window, event);
-
-  /* invoke non-(control/alt) accelerators */
-  if (! handled && ! (event->state & (GDK_CONTROL_MASK | GDK_MOD1_MASK)))
-    handled = gtk_window_activate_key (window, event);
-
-  /* chain up, bypassing gtk_window_key_press(), to invoke binding set */
-  if (! handled)
-    handled = GTK_WIDGET_CLASS (g_type_class_peek (g_type_parent (GTK_TYPE_WINDOW)))->key_press_event (widget, event);
-
-  return handled;
 }
 
 static void
